[package]
name = "hermez-api"
version = "0.1.0"
authors = ["Jason <jason@jaypha.com.au>"]
edition = "2018"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
url = "*"
itertools = "*"
surf = "2.2.0"

[dev-dependencies]
async-std = { version = "*", features = ["attributes"] }

#ureq = { version = "*", features = [ "tls", "json" ] }

